--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -47,6 +47,7 @@
           <li><a href="/features.html"><span>Features</span></a></li>
           <li><a href="/roadmap.html"><span>Roadmap</span></a></li>
 	  <li><a href="/amun.html"><span>Amun</span></a></li>
+	  <li><a href="/isis.html"><span>Isis</span></a></li>
           <li><a href="http://blog.openescalar.org"><span>Blog</span></a></li>
 	  <li><a href="http://www.github.com/openescalar/"><img src="github-icon.jpg" alt="Github" style="border:0;width:24px;height:24px;" /></a></li>
           <li><a href="https://plus.google.com/114371646903483254913?prsrc=3" rel="publisher" style="text-decoration:none;">
