Added Gears designs

--- a/isis.html
+++ b/isis.html
@@ -69,20 +69,20 @@
               <h2>Isis PaaS Management</h2>
 	      <p>Second stack of OpenEscalar, designed to allow users to provide platform as a service on different clouds making their application portable through the different providers. Isis provides the following features:<br>
 	      <ul>
-		<li>Escalar Web Stacks</li>
-		<li>Escalar Auth and Identity</li>
-		<li>Escalar NoSQL Clusters</li>
-		<li>Escalar SQL Clusters</li>
-		<li>Escalar CDN</li>
-		<li>Escalar Data</li>
-		<li>Escalar Monitoring</li>
-		<li>Escalar Dynamic Name Service</li>
-		<li>Escalar Search Indexer</li>
-		<li>Escalar Mail Service</li>
-		<li>Escalar Notification Service</li>
-		<li>Escalar Queue Service</li>
-		<li>Escalar Workflow</li>
-		<li>Escalar Cache</li>
+		<li><a href="EWSArchitecture.png">Escalar Web Stacks</a></li>
+		<li><a href="EAIArchitecture.png">Escalar Auth and Identity</a></li>
+		<li><a href="ENCArchitecture.png">Escalar NoSQL Clusters</a></li>
+		<li><a href="ESCArchitecture.png">Escalar SQL Clusters</a></li>
+		<li><a href="ECDNArchitecture.png">Escalar CDN</a></li>
+		<li><a href="EDATAArchitecture.png">Escalar Data</a><li>
+		<li><a href="EMONArchitecture.png">Escalar Monitoring</a></li>
+		<li><a href="EDNSArchitecture.png">Escalar Dynamic Name Service</a></li>
+		<li><a href="ESIArchitecture.png">Escalar Search Indexer</a></li>
+		<li><a href="EMSArchitecture.png">Escalar Mail Service</a></li>
+		<li><a href="ENSArchitecture.png">Escalar Notification Service</a></li>
+		<li><a href="EQSArchitecture.png">Escalar Queue Service</a></li>
+		<li><a href="EWFArchitecture.png">Escalar Workflow</a></li>
+		<li><a href="ECACHEArchitecture.png">Escalar Cache</a></li>
 	      </ul></p>
            </div>
         </div>
