Fixed typo on list

--- a/isis.html
+++ b/isis.html
@@ -74,7 +74,7 @@
 		<li><a href="ENCArchitecture.png">Escalar NoSQL Clusters</a></li>
 		<li><a href="ESCArchitecture.png">Escalar SQL Clusters</a></li>
 		<li><a href="ECDNArchitecture.png">Escalar CDN</a></li>
-		<li><a href="EDATAArchitecture.png">Escalar Data</a><li>
+		<li><a href="EDATAArchitecture.png">Escalar Data</a></li>
 		<li><a href="EMONArchitecture.png">Escalar Monitoring</a></li>
 		<li><a href="EDNSArchitecture.png">Escalar Dynamic Name Service</a></li>
 		<li><a href="ESIArchitecture.png">Escalar Search Indexer</a></li>
