Finished gears pages

--- a/EQSArchitecture.html
+++ b/EQSArchitecture.html
@@ -66,16 +66,16 @@
   <div class="container">
         <div class="row">
            <div class="offset1 span9">
-		<h2>Components</h2>
-		<p>Isis is formed by the following components:<br>
-		</p>
+		<h2>Escalar Queue Service - EQS</h2>
+		<p>EQS provides a scalable and highly available queuing service which can transport AMPQ or STOMP protocol, based on rabbitmq the gear is clustered making it distributed and easy to scale plus its sitting on top of cluster suite which allows the service to be HA in case of failures. EQS allows the user to setup topics, queues, vhosts and user authentication.
+                </p>
            </div>
         </div>
 	<br>
         <div class="row">
            <div class="offset1 span9">
 	      <h2>Architecture</h2>
-	      <p><a href="IsisArchitecture.png"><img src="IsisArchitecture.png" /></a></p>
+	      <p><a href="EQSArchitecture.png"><img src="EQSArchitecture.png" /></a></p>
            </div>
         </div>
         <br>
