--- a/ESCArchitecture.html
+++ b/ESCArchitecture.html
@@ -66,8 +66,8 @@
   <div class="container">
         <div class="row">
            <div class="offset1 span9">
-		<h2>Components</h2>
-		<p>Isis is formed by the following components:<br>
+		<h2>Escalar SQL Cluster - ESC</h2>
+		<p>ESC provides RDBMs clusters based in one of the most popular databases. The 2 main type of ESC are replication Master-Slave and Replication Master-Master, the 2 tpe of databases are MariaDB and MySQL, however MySQL can only provide the Master-Slave replication, Master-Master is doable through MariaDB Galera cluster. Once again custom settings can be passed down to the clusters through the web interface. 
 		</p>
            </div>
         </div>
@@ -75,7 +75,7 @@
         <div class="row">
            <div class="offset1 span9">
 	      <h2>Architecture</h2>
-	      <p><a href="IsisArchitecture.png"><img src="IsisArchitecture.png" /></a></p>
+	      <p><a href="ESCArchitecture.png"><img src="ESCArchitecture.png" /></a></p>
            </div>
         </div>
         <br>
