--- a/ESIArchitecture.html
+++ b/ESIArchitecture.html
@@ -66,8 +66,9 @@
   <div class="container">
         <div class="row">
            <div class="offset1 span9">
-		<h2>Components</h2>
-		<p>Isis is formed by the following components:<br>
+		<h2>Escalar Search Indexer - ESI</h2>
+		<p>ESI is based on SolrCloud which allows you to run a highly available solr cluster for adding documents, index them and then produce high performance searches on them. It uses Zookeeper in order to maintain the cluster availability. 
+		ESI provides an API which allows you to pass on specific custom settings besides the solr/lucene api.
 		</p>
            </div>
         </div>
@@ -75,7 +76,7 @@
         <div class="row">
            <div class="offset1 span9">
 	      <h2>Architecture</h2>
-	      <p><a href="IsisArchitecture.png"><img src="IsisArchitecture.png" /></a></p>
+	      <p><a href="ESIArchitecture.png"><img src="ESIArchitecture.png" /></a></p>
            </div>
         </div>
         <br>
