--- a/EWSArchitecture.html
+++ b/EWSArchitecture.html
@@ -66,8 +66,8 @@
   <div class="container">
         <div class="row">
            <div class="offset1 span9">
-		<h2>Components</h2>
-		<p>Isis is formed by the following components:<br>
+		<h2>Escalar Web Stacks - EWS</h2>
+		<p>EWS as it full name implies, its a highly available webstack which is conformed by a loadbalancer, viewdns, app servers, database backend, a cache layer and a memcache layer. EWS is a PaaS in a box which allow developerts just to upload their code and have their application up and running in minutes. The technologies supported by EWS are php, java, perl, node.js, rails and django but more will be added in the future.
 		</p>
            </div>
         </div>
@@ -75,7 +75,7 @@
         <div class="row">
            <div class="offset1 span9">
 	      <h2>Architecture</h2>
-	      <p><a href="IsisArchitecture.png"><img src="IsisArchitecture.png" /></a></p>
+	      <p><a href="EWSArchitecture.png"><img src="EWSArchitecture.png" /></a></p>
            </div>
         </div>
         <br>
