--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="navbar-inner">
       <div class="container">
         <a class="brand" href="/">
-          OpenEscalar
+          OpenEscalar Test
         </a>
         <ul class="nav">
           <li><a href="/" class="active"><span>Home</span></a></li>
